Fix bug 6 - overflow with bg image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,11 +41,12 @@ body {
 body {
   background-color: var(--oxford-blue);
   font-family: var(--content-text);
+  text-align: center;
+}
+
+.main-background {
   background: url("../images/background.jpg") no-repeat center center;
   background-size: cover;
-  text-align: center;
-  height: 100%;
-  background-size: 100% 100%;
 }
 
 /*---------- 404 PAGE ----------*/
@@ -355,7 +356,6 @@ input::placeholder {
 
 #finalScore {
   padding: 0.5em;
-
 }
 
 .high-score {
@@ -369,6 +369,15 @@ input::placeholder {
 
 /*---------- MEDIA QUERIES ----------*/
 @media screen and (max-width: 1100px) {
+  .main-background {
+    background: url("../images/bg-365x747px.png") no-repeat center center;
+    background-size: cover;
+  }
+
+  #highScores {
+    padding-top: 2em;
+  }
+
   #question {
     padding: 1em 1em;
     font-size: 1.4em;
@@ -408,6 +417,10 @@ input::placeholder {
 @media screen and (max-width: 765px) {
   .intro-text>h2 {
     font-size: 1.2em;
+  }
+
+  #highScores {
+    padding-top: 1em;
   }
 }
 
